# DisplaySetter

./: .gitignore  CMakeLists.txt  DisplaySetter.cpp  README.md  RunDisplaySetter.ps1  config.ini
resources/: resource.rc
